ingress/grafana-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    ingressClassName: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: "grafana.cg5labs.ddns.net"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: prometheus-grafana
              port: 
                number: 80
