ingress/name-based-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
  annotations:
    ingressClassName: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "apple.example.com"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: apple-service
              port: 
                number: 5678
  - host: "banana.example.com"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: banana-service
              port: 
                number: 5678
